# ccc-jj

./: Cargo.toml  README.md
assets/: commit-config.toml
src/: bookmark_generator.rs  claude_client.rs  commit_message_generator.rs  config.rs  diff.rs  main.rs  text_formatter.rs
