[package]
name = "ccc-jj"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jc"
path = "src/main.rs"

[dependencies]
jj-lib = { git = "https://github.com/jj-vcs/jj.git", rev = "3f486f3f82731978296b54ac69eff72cd0ec58ce" }
tokio = { version = "1.48.0", features = ["macros", "io-util", "rt-multi-thread"] }
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "env"] }
dirs = "6.0.0"
futures = "0.3.31"
similar = "2.7.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
indicatif = "0.18.3"
gethostname = "0.5.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
