[package]
name = "ccc-jj"
version = "0.6.3"
edition = "2024"
description = "Auto-commit changes in a jj workspace using Claude for commit messages"

[[bin]]
name = "jc"
path = "src/main.rs"

[dependencies]
jj-lib = { git = "https://github.com/jj-vcs/jj.git", tag = "v0.36.0" }
tokio = { version = "1.48.0", features = ["macros", "io-util", "rt-multi-thread"] }
globset = "0.4.18"
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
dirs = "6.0.0"
futures = "0.3.31"
similar = "2.7.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
indicatif = "0.18.3"
gethostname = "1.1.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
textwrap = "0.16"
unicode-width = "0.2.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
